logs/dag_id=ETL_Flow/run_id=manual__2024-03-20T160242.916831+0000/task_id=load_to_mrr/attempt=1.log
[2024-03-20T16:03:04.768+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: ETL_Flow.load_to_mrr manual__2024-03-20T16:02:42.916831+00:00 [queued]>
[2024-03-20T16:03:04.798+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: ETL_Flow.load_to_mrr manual__2024-03-20T16:02:42.916831+00:00 [queued]>
[2024-03-20T16:03:04.801+0000] {taskinstance.py:2193} INFO - Starting attempt 1 of 6
[2024-03-20T16:03:04.851+0000] {taskinstance.py:2214} INFO - Executing <Task(PostgresOperator): load_to_mrr> on 2024-03-20 16:02:42.916831+00:00
[2024-03-20T16:03:04.865+0000] {standard_task_runner.py:60} INFO - Started process 3464 to run task
[2024-03-20T16:03:04.873+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'ETL_Flow', 'load_to_mrr', 'manual__2024-03-20T16:02:42.916831+00:00', '--job-id', '2031', '--raw', '--subdir', 'DAGS_FOLDER/etl2.py', '--cfg-path', '/tmp/tmptjjod1c6']
[2024-03-20T16:03:04.880+0000] {standard_task_runner.py:88} INFO - Job 2031: Subtask load_to_mrr
[2024-03-20T16:03:05.012+0000] {task_command.py:423} INFO - Running <TaskInstance: ETL_Flow.load_to_mrr manual__2024-03-20T16:02:42.916831+00:00 [running]> on host a1a2ab3031a9
[2024-03-20T16:03:05.755+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='coder2j' AIRFLOW_CTX_DAG_ID='ETL_Flow' AIRFLOW_CTX_TASK_ID='load_to_mrr' AIRFLOW_CTX_EXECUTION_DATE='2024-03-20T16:02:42.916831+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-03-20T16:02:42.916831+00:00'
[2024-03-20T16:03:05.761+0000] {sql.py:276} INFO - Executing:     INSERT INTO MRR_Fact_Orders (Order_ID, Order_Time, Customer_ID, Employee_ID, Shipper_ID, Freight)
    SELECT * FROM {orders_df}
    WHERE Order_ID NOT IN (
        SELECT DISTINCT Order_ID 
        FROM DWH_Fact_Product_In_Order)
[2024-03-20T16:03:05.809+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-20T16:03:05.849+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-20T16:03:05.971+0000] {sql.py:457} INFO - Running statement:     INSERT INTO MRR_Fact_Orders (Order_ID, Order_Time, Customer_ID, Employee_ID, Shipper_ID, Freight)
    SELECT * FROM {orders_df}
    WHERE Order_ID NOT IN (
        SELECT DISTINCT Order_ID 
        FROM DWH_Fact_Product_In_Order), parameters: None
[2024-03-20T16:03:06.026+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "{"
LINE 2:     SELECT * FROM {orders_df}
                          ^

[2024-03-20T16:03:06.092+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=ETL_Flow, task_id=load_to_mrr, execution_date=20240320T160242, start_date=20240320T160304, end_date=20240320T160306
[2024-03-20T16:03:06.216+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 2031 for task load_to_mrr (syntax error at or near "{"
LINE 2:     SELECT * FROM {orders_df}
                          ^
; 3464)
[2024-03-20T16:03:06.262+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-03-20T16:03:06.339+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
